# csgo_items_parser

./: .gitignore  README.md  __init__.py  items_manager.py  items_parser.py  pyproject.toml  readme.MD  requirements.txt
src/cs_parser/: __init__.py  cli.py  items_manager.py  items_parser.py
src/cs_parser/structs/: Attribute.py  Collection.py  Color.py  GraffitiTint.py  Item.py  Keychain.py  Lootlist.py  Musicdef.py  Paintkit.py  Prefab.py  Quality.py  Rarity.py  Stickerkit.py  __init__.py
src/cs_parser/utils/: __init__.py  utils.py
structs/: Attribute.py  Base.py  Collection.py  Color.py  GraffitiTint.py  Item.py  Lootlist.py  Musicdef.py  Paintkit.py  Prefab.py  Quality.py  Rarity.py  Stickerkit.py  __init__.py
