[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cs_parser"
version = "0.1.0"
description = "CS Items Parser"
authors = [
  { name="ValvojaX", email="valvoja.dev@gmail.com" }
]
dependencies = ["requests", "vdf", "ujson"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cs-parser = "cs_parser.cli:main"